# MyCpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bash_init.sh  hello.cpp  main.cpp  makefile-custom.mk  makefile1.mk  makefile2.mk  printtest.cpp  readInput.c  readInputtest.c  run.cpp  run.sh  stdouttest.cpp  test.cpp
makefiles/: makefile1.mk  makefile2.mk
src/: ReadInput.c  SwitchStdout.cpp  print.cpp
src/inc/: ReadInput.h  SwitchStdout.hpp  print.hpp
